--- a/kubernetes/examples/ingress/app1-frontend.yaml
+++ b/kubernetes/examples/ingress/app1-frontend.yaml
@@ -1,32 +1,33 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: app1
+  name: app1-frontend
   labels:
-    name: app1
+    name: app1-frontend
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        name: app1
+        name: app1-frontend
     spec:
       containers:
-      - name: app1
-        image: nginx:latest
+      - name: app1-frontend
+        image: hashicorp/http-echo:latest
+        command: ["/http-echo", "-listen=:80", "-text=app1-frontend"]
         ports:
           - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: app1
+  name: app1-frontend
   labels:
-    name: app1
+    name: app1-frontend
 spec:
   ports:
     - name: http
       port: 80
       protocol: TCP
   selector:
-    name: app1
+    name: app1-frontend
