--- a/kubernetes/examples/k8s-oidc-authenticator/helm-chart/templates/clusterrolebinding.yaml
+++ b/kubernetes/examples/k8s-oidc-authenticator/helm-chart/templates/clusterrolebinding.yaml
@@ -3,6 +3,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: oidc-cluster-admin
+  labels:
+    app: k8s-oidc-authenticator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
