--- a/kubernetes/examples/k8s-oidc-authenticator/helm-chart/templates/rolebinding.yaml
+++ b/kubernetes/examples/k8s-oidc-authenticator/helm-chart/templates/rolebinding.yaml
@@ -1,25 +1,22 @@
 {{- if .Values.role_bindings.namespaces }}
-
-# To fix
-#
-# {{- range $key, $val := .Values.role_bindings.namespaces }}
-# {{ $key }}: {{ $val | quote }}
-# {{- end }}
-#
-# apiVersion: rbac.authorization.k8s.io/v1
-# kind: RoleBinding
-# metadata:
-#   labels:
-#     app: xxxx
-#   name: xxxx
-#   namespace: default
-# roleRef:
-#   apiGroup: rbac.authorization.k8s.io
-#   kind: Role
-#   name: xxxx
-# subjects:
-# - kind: ServiceAccount
-#   name: xxxxx
-#   namespace: default
-
+{{- range $key, $val := .Values.role_bindings.namespaces }}
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  labels:
+    app: k8s-oidc-authenticator
+  name: role-grantor-binding-{{ $key }}
+  namespace: {{ $key }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: admin
+subjects:
+{{- range $val }}
+- apiGroup: rbac.authorization.k8s.io
+  kind: User
+  name: {{ . | quote }}
+{{- end }}
+---
+{{- end }}
 {{- end }}
