Email-based access + nicer output (#16)
* Eye candy in output.

* Correctly line-broken eye candy

* Handle CA_DATA

* Allow emails from whitelist

* Use same ENV name + separator as in the helm

* Security properties

* Small changes for oidc helm chart

* Deal with garbage characters explicitely

* Remove flexible line breaking

--- a/kubernetes/examples/k8s-oidc-authenticator/helm-chart/templates/deployment.yaml
+++ b/kubernetes/examples/k8s-oidc-authenticator/helm-chart/templates/deployment.yaml
@@ -29,6 +29,14 @@ spec:
             value: {{ .Values.oidc.allowed_domain }}
           - name: ALLOWED_EMAIL_ADDRESSES
             value: {{ template "allowed_email_addresses" . }}
+{{- if .Values.cluster_ca_data }}
+          - name: CA_DATA
+            value: {{ .Values.cluster_ca_data }}
+{{- end }}
+{{- if .Values.cluster_name }}
+          - name: CLUSTER_NAME
+            value: {{ .Values.cluster_name }}
+{{- end }}
         ports:
           - containerPort: 8080
             protocol: TCP
