--- a/kubernetes/examples/k8s-oidc-authenticator/helm-chart/templates/ingress.yaml
+++ b/kubernetes/examples/k8s-oidc-authenticator/helm-chart/templates/ingress.yaml
@@ -3,10 +3,9 @@ kind: Ingress
 metadata:
   name: {{ .Chart.Name }}
   annotations:
-    kubernetes.io/ingress.class: nginx
-    ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     {{- if .Values.ingress.whitelist_ips }}
-    ingress.kubernetes.io/whitelist-source-range: "{{- join "," .Values.ingress.whitelist_ips -}}"
+    nginx.ingress.kubernetes.io/whitelist-source-range: "{{- join "," .Values.ingress.whitelist_ips -}}"
     {{- end }}
   labels:
     app: k8s-oidc-authenticator
